--- a/package.json
+++ b/package.json
@@ -1,13 +1,29 @@
 {
     "name": "php-bcrypt-converter",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "description": "Convert PHP bcrypt hashes to JavaScript bcrypt format",
     "main": "dist/index.js",
-    "homepage": "https://github.com/Dippys/php-bcrypt-converter",
+    "module": "dist/index.mjs",
     "types": "dist/index.d.ts",
+    "type": "module",
+    "files": [
+        "dist",
+        "LICENSE",
+        "README.md"
+    ],
+    "exports": {
+        ".": {
+            "require": "./dist/index.js",
+            "import": "./dist/index.mjs",
+            "types": "./dist/index.d.ts"
+        }
+    },
     "scripts": {
+        "build": "tsc",
+        "prepare": "npm run build",
         "test": "jest",
-        "test:watch": "jest --watch"
+        "test:watch": "jest --watch",
+        "prepublishOnly": "npm test && npm run build"
     },
     "jest": {
         "preset": "ts-jest",
@@ -24,10 +40,11 @@
     "repository": "dippys/php-bcrypt-converter",
     "bugs": {
         "url": "https://github.com/Dippys/php-bcrypt-converter/issues"
-      },
+    },
     "license": "MIT",
     "devDependencies": {
         "@types/jest": "^29.5.14",
+        "@types/node": "^20.0.0",
         "jest": "^29.7.0",
         "ts-jest": "^29.2.5",
         "typescript": "^5.7.2"
