--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "jest": {
         "preset": "ts-jest",
         "testEnvironment": "node",
-        "testMatch": ["**/src/**/*.test.ts"], // Only look for tests in src folder
-        "testPathIgnorePatterns": ["/node_modules/", "/dist/"] // Ignore dist folder
+        "testMatch": ["**/src/**/*.test.ts"],
+        "testPathIgnorePatterns": ["/node_modules/", "/dist/"]
     }
     "keywords": [
         "bcrypt",
