--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
     "name": "php-bcrypt-converter",
-    "version": "1.1.2",
+    "version": "1.1.5",
     "description": "Convert PHP bcrypt hashes to JavaScript bcrypt format",
     "main": "dist/index.js",
-    "module": "dist/index.mjs",
     "types": "dist/index.d.ts",
     "type": "module",
     "files": [
@@ -13,8 +12,8 @@
     ],
     "exports": {
         ".": {
-            "require": "./dist/index.js",
-            "types": "./dist/index.d.ts"
+            "import": "./dist/index.js",
+            "require": "./dist/index.js"
         }
     },
     "scripts": {
