--- a/tsconfig.mjs.json
+++ b/tsconfig.mjs.json
@@ -1,11 +1,10 @@
 {
 	"compilerOptions":{
 		"target":"es2018",
-		"module":"ESNext",
-		"moduleResolution":"node",
+		"module":"NodeNext",
+		"moduleResolution":"NodeNext",
 		"declaration":true,
-		"declarationMap":true,
-		"outDir":"./dist",
+		"outDir":"./dist/mjs",
 		"strict":true,
 		"esModuleInterop":true,
 		"allowSyntheticDefaultImports":true
